--- a/templates/blog/post.html
+++ b/templates/blog/post.html
@@ -51,28 +51,28 @@
                             <div class="social-media">
                                 <ul class="list-inline">
                                     <li>
-                                        <a href="#" class="color-facebook">
+                                        <a href="https://www.facebook.com/sharer/sharer.php?u={{ request.build_absolute_uri }}" target="_blank" class="color-facebook">
                                             <i class="fab fa-facebook"></i>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#" class="color-instagram">
-                                            <i class="fab fa-instagram"></i>
+                                        <a href="https://www.linkedin.com/sharing/share-offsite/?url={{ request.build_absolute_uri }}"  target="_blank" class="color-linkedin">
+                                            <i class="fab fa-linkedin"></i>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#" class="color-twitter">
+                                        <a href="http://twitter.com/share?text={{ article.title }}. &url={{ request.build_absolute_uri }}" target="_blank" class="color-twitter">
                                             <i class="fab fa-twitter"></i>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#" class="color-youtube">
-                                            <i class="fab fa-youtube"></i>
+                                        <a href="https://api.whatsapp.com/send?text={{ request.build_absolute_uri }}" target="_blank" class="color-whatsapp">
+                                            <i class="fab fa-whatsapp"></i>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#" class="color-pinterest">
-                                            <i class="fab fa-pinterest"></i>
+                                        <a href="https://telegram.me/share/url?url={{ request.build_absolute_uri }}&text={{ article.title }}" target="_blank" class="color-telegram">
+                                            <i class="fab fa-telegram"></i>
                                         </a>
                                     </li>
                                 </ul>
