--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -31,7 +31,7 @@
                         <input type="checkbox" class="custom-control-input" id="rememberMe">
                             <label class="custom-control-label" for="rememberMe">Remember Me</label>
                         </div>
-                        <a href="#" class="btn-link  ml-auto">Forgot Password?</a>
+                        <a href="{% url 'forgot_password' %}" class="btn-link  ml-auto">Forgot Password?</a>
                     </div>
                     <div class="form-group">
                         <button type="submit" class="btn-custom">Login</button>
