[UPDATE]💄 change facebook icon

--- a/templates/blog/author.html
+++ b/templates/blog/author.html
@@ -22,7 +22,7 @@
                             <ul class="list-inline">
                                 <li>
                                     <a href="#" class="color-facebook">
-                                        <i class="fab fa-facebook"></i>
+                                        <i class="fab fa-facebook-f"></i>
                                     </a>
                                 </li>
                                 <li>
