--- a/templates/dashboard/auth/register.html
+++ b/templates/dashboard/auth/register.html
@@ -32,7 +32,9 @@
 												</svg> 
 											</span>
 											{{ form.username }}
-                        					{{ form.username.errors }}
+										</div>
+                        				<div class="pt-2 text-danger">
+											{{ form.username.errors }}
 										</div>
 									</div>
 									<div class="form-group mb-4">
@@ -47,7 +49,9 @@
 												</svg> 
 											</span>
 											{{ form.email }}
-                        					{{ form.email.errors }}
+										</div>
+                        				<div class="pt-2 text-danger">
+											{{ form.email.errors }}
 										</div>
 									</div>
 
@@ -60,7 +64,9 @@
 													</svg> 
 												</span>
 												{{ form.password }}
-                        						{{ form.password.errors }}
+											</div>
+                        					<div class="pt-2 text-danger">
+												{{ form.password.errors }}
 											</div>
 										</div>
 
@@ -72,7 +78,9 @@
 													</svg> 
 												</span>
 												{{ form.confirm_password }}
-                        						{{ form.confirm_password.errors }}
+											</div>
+											<div class="pt-2 text-danger">
+												{{ form.confirm_password.errors }}
 											</div>
 										</div>
 
