🎉  Create base style page for login and register page

--- a/templates/dashboard/layouts/base_fullscreen.html
+++ b/templates/dashboard/layouts/base_fullscreen.html
@@ -31,7 +31,7 @@
 
     </head>
 
-    <body class="{% block body_class %}{% endblock body_class %}">
+    <body>
            
         {% block content %}{% endblock content %}
 
