--- a/templates/dashboard/auth/register.html
+++ b/templates/dashboard/auth/register.html
@@ -17,6 +17,7 @@
 								<div class="text-center text-md-center mb-4 mt-md-0">
 									<h1 class="mb-0 h3">Create Account</h1>
 								</div>
+								{% include 'dashboard/includes/alert.html' %}
 								<form action="{% url 'register' %}" method="POST" class="mt-4">
 									{% csrf_token %}
                     				{{ form.non_field_errors }}
@@ -24,12 +25,8 @@
 										<div class="input-group">
 											<span class="input-group-text" id="basic-addon1">
 												<svg class="icon icon-xs text-gray-600" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-													<path
-														d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z">
-													</path>
-													<path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z">
-													</path>
-												</svg> 
+													<path fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z" clip-rule="evenodd"></path>
+												</svg>
 											</span>
 											{{ form.username }}
 										</div>
