--- a/templates/dashboard/includes/alert.html
+++ b/templates/dashboard/includes/alert.html
@@ -9,8 +9,8 @@
         
         */
         .this {
-            background-color: #fcf2e3;
-            padding: .50rem;
+            background-color: #d3dff5;
+            padding: .50rem; 
             border-radius: 5px;
         }
     </style>
@@ -20,7 +20,7 @@
 {% if messages %}
 
     {% for message in messages %}
-    <div class="alert alert-danger alert-dismissible fade show this" role="alert">
+    <div class="alert alert-info alert-dismissible fade show this" role="alert">
         <span class="small">{% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}<strong>An error occurred:</strong> {% endif %}
             {{ message }}
         <span/>
