--- a/templates/dashboard/includes/navigation.html
+++ b/templates/dashboard/includes/navigation.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load blog_tags %}
 			<!-- Top navigation Bar -->
 			<nav class="navbar navbar-top navbar-expand navbar-dashboard navbar-dark ps-0 pe-2 pb-0">
 				<div class="container-fluid px-0">
@@ -35,14 +36,16 @@
 						<!-- Account -->
 						<ul class="navbar-nav align-items-center">
 							<li class="nav-item dropdown ms-lg-3">
+								{% if request.user.is_authenticated %}
 								<a class="nav-link dropdown-toggle pt-1 px-0" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 									<div class="media d-flex align-items-center">
-										<img class="avatar rounded-circle" alt="Image placeholder" src="{% static 'dashboard/assets/img/team/profile-picture-3.jpg' %}">
+										<img class="avatar rounded-circle" alt="Image placeholder" src="{{ user.profile.avatar.url }}">
 										<div class="media-body ms-2 text-dark align-items-center d-none d-lg-block">
-											<span class="mb-0 font-small fw-bold text-gray-900">Bonnie Green</span>
+											<span class="mb-0 font-small fw-bold text-gray-900">{{ user.username }}</span>
 										</div>
 									</div>
 								</a>
+								{% endif %}
 
 								<div class="dropdown-menu dashboard-dropdown dropdown-menu-end mt-2 py-1">
 									<a class="dropdown-item d-flex align-items-center" href="profile.html">
@@ -61,7 +64,7 @@
 									
 									<div role="separator" class="dropdown-divider my-1">
 									</div>
-									<a class="dropdown-item d-flex align-items-center" href="sign-in.html">
+									<a class="dropdown-item d-flex align-items-center" href="{% url 'logout' %}">
 										<svg class="dropdown-icon text-danger me-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 											<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"></path>
 										</svg> 
