--- a/templates/dashboard/includes/sidebar.html
+++ b/templates/dashboard/includes/sidebar.html
@@ -48,7 +48,7 @@
                     <span class="mt-1 sidebar-text">Dashboard</span>
                 </a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item {% if '/dashboard/me/article/' == request.path %}active{% endif %}">
                 <span class="nav-link d-flex justify-content-between align-items-center"
                     data-bs-toggle="collapse" data-bs-target="#submenu-dashboard" aria-expanded="false">
                     <span>
@@ -64,20 +64,20 @@
                 </span>
                 <div class="multi-level collapse show" role="list" id="submenu-dashboard" aria-expanded="false">
                     <ul class="flex-column nav">
-                        <li class="nav-item">
-                            <a href="write_article.html" class="nav-link">
+                        <li class="nav-item {% if '/dashboard/me/article/create/' == request.path %}active{% endif %}">
+                            <a href="{% url 'dashboard:article-create' %}" class="nav-link">
                             <span class="sidebar-icon"><i class="fas fa-feather-alt"></i></span> 
                             <span class="sidebar-text">Write an Article</Article></span>
                         </a>
                     </li>
-                        <li class="nav-item">
-                            <a href="published_articles.html" class="nav-link">
+                        <li class="nav-item {% if '/dashboard/me/published-articles/' == request.path %}active{% endif %}">
+                            <a href="{% url 'dashboard:published-articles' %}" class="nav-link">
                                 <span class="sidebar-icon"><i class="fas fa-clipboard-list"></i></span> 
                                 <span class="sidebar-text">Published Articles</span>
                             </a>
                         </li>
-                        <li class="nav-item">
-                            <a href="drafted_articles.html" class="nav-link">
+                        <li class="nav-item {% if '/dashboard/me/drafted-articles/' == request.path %}active{% endif %}">
+                            <a href="{% url 'dashboard:drafted-articles' %}" class="nav-link">
                                 <span class="sidebar-icon"><i class="far fa-list-alt"></i></span> 
                                 <span class="sidebar-text">Drafted Articles</span>
                             </a>
