🚚 create url patterns for dashboard views

--- a/templates/dashboard/layouts/base.html
+++ b/templates/dashboard/layouts/base.html
@@ -17,7 +17,7 @@
 
         <!-- Primary Meta Tags -->
         <title>
-            Author {% block title %}{% endblock %} | VirTips
+            {% block title %}Author{% endblock %} | VirTips
         </title>
 
         <!-- Fontawesome -->
