--- a/templates/dashboard/includes/sidebar.html
+++ b/templates/dashboard/includes/sidebar.html
@@ -48,7 +48,7 @@
                     <span class="mt-1 sidebar-text">Dashboard</span>
                 </a>
             </li>
-            <li class="nav-item {% if '/dashboard/me/article/' == request.path %}active{% endif %}">
+            <li class="nav-item">
                 <span class="nav-link d-flex justify-content-between align-items-center"
                     data-bs-toggle="collapse" data-bs-target="#submenu-dashboard" aria-expanded="false">
                     <span>
@@ -85,8 +85,8 @@
                     </ul>
                 </div>
             </li>
-            <li class="nav-item">
-                <a href="category.html" class="nav-link d-flex align-items-center justify-content-between">
+            <li class="nav-item {% if '/dashboard/me/add/category/' == request.path %}active{% endif %}">
+                <a href="{% url 'dashboard:add-category' %}" class="nav-link d-flex align-items-center justify-content-between">
                     <span>
                         <span class="sidebar-icon">
                             <i class="fas fa-layer-group"></i>
@@ -105,8 +105,8 @@
                     </span>
                 </a>
             </li>
-            <li class="nav-item">
-                <a href="settings.html" class="nav-link">
+            <li class="nav-item {% if '/dashboard/me/settings/' == request.path %}active{% endif %}">
+                <a href="{% url 'dashboard:author-settings' %}" class="nav-link">
                     <span class="sidebar-icon">
                         <i class="fas fa-cog"></i>
                     </span>
@@ -115,7 +115,7 @@
             </li>
             <li role="separator" class="dropdown-divider mt-4 mb-3 border-gray-700"></li>
             <li class="nav-item">
-                <a href="" target="_blank" class="nav-link d-flex align-items-center">
+                <a href="{% url 'about' %}" target="_blank" class="nav-link d-flex align-items-center">
                 <span class="sidebar-icon">
                     <svg
                             class="icon icon-xs me-2" fill="currentColor" viewBox="0 0 20 20"
