🚚 Get author full name

--- a/templates/blog/author.html
+++ b/templates/blog/author.html
@@ -13,7 +13,7 @@
                         <a href="author.html" class="image">
                             <img src="{{author.avatar.url}}" alt="">
                         </a>
-                        <h6><span>Hi, I'm {{author.name}}</span></h6>
+                        <h6><span>Hi, I'm {{author.full_name}}</span></h6>
                         <div class="link">{{post_count}} Articles</div>
                         <p> {{author.bio}}
                         </p>
