--- a/templates/blog/blog.html
+++ b/templates/blog/blog.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block title %} Blog | VirTips{% endblock title %}
 
+{% load blog_tags %}
 {% load static %}
 {% block content %}
 
@@ -59,7 +60,7 @@
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="{% url 'blog:author' post.author.user.username%}">{{post.author.name}}</a>
+                                                <a href="{% url 'blog:author' post.author.user.username%}">{{post.author.full_name}}</a>
                                             </li>
                                             <li class="dot"></li>
                                             <li><span class="icon_clock_alt pr-2"></span>{{post.publish | date}}</li>
@@ -116,77 +117,42 @@
                     </div>
                 </div>
                 <div class="col-lg-4 max-width">
-                    <!--widget-latest-posts-->
+                    <!--widget-popular-posts-->
+                    {% get_most_viewed_posts as most_viewed_posts %}
+                    {% if most_viewed_posts %}
                     <div class="widget " data-aos="fade-up" data-aos-duration="3000">
                         <div class="section-title">
-                            <h5>Latest Posts</h5>
+                            <h5>Popural Posts</h5>
                         </div>
                         <ul class="widget-latest-posts">
+                            {% for post in most_viewed_posts %}
                             <li class="last-post">
                                 <div class="image">
-                                    <a href="post-default.html">
-                                        <img src="{% static 'img/latest/1.jpg' %}" alt="...">
+                                    <a href="{{post.get_absolute_url}}">
+                                        <img src="{{post.thumbnail.url}}" alt="...">
                                     </a>
                                 </div>
-                                <div class="nb">1</div>
+                                {% with ''|center:5 as range %}
+                                {% for i in range %}
+                                <div class="nb">{{forloop.counter}}</div>
+                                {% endfor %}
+                                {% endwith %}
                                 <div class="content">
                                     <p>
-                                        <a href="post-default.html">5 Things I Wish I Knew Before Traveling to Malaysia</a>
+                                        <a href="{{post.get_absolute_url}}">{{post.title}}</a>
                                     </p>
                                     <small>
-                                        <span class="icon_clock_alt"></span> January 15, 2021</small>
+                                        <span class="icon_clock_alt"></span>{{post.publish | date}}</small>
                                 </div>
                             </li>
-                            <li class="last-post">
-                                <div class="image">
-                                    <a href="post-default.html">
-                                        <img src="{% static 'img/latest/2.jpg' %}" alt="...">
-                                    </a>
-                                </div>
-                                <div class="nb">2</div>
-                                <div class="content">
-                                    <p>
-                                        <a href="post-default.html">Everything you need to know about visiting the Amazon.</a>
-                                    </p>
-                                    <small>
-                                        <span class="icon_clock_alt"></span> January 15, 2021</small>
-                                </div>
-                            </li>
-                            <li class="last-post">
-                                <div class="image">
-                                    <a href="post-default.html">
-                                        <img src="{% static 'img/latest/3.jpg' %}" alt="...">
-                                    </a>
-                                </div>
-                                <div class="nb">3</div>
-                                <div class="content">
-                                    <p>
-                                        <a href="post-default.html">How to spend interesting vacation after hard work?</a>
-                                    </p>
-                                    <small>
-                                        <span class="icon_clock_alt"></span> January 15, 2021</small>
-                                </div>
-                            </li>
-                            <li class="last-post">
-                                <div class="image">
-                                    <a href="post-default.html">
-                                        <img src="{% static 'img/latest/4.jpg' %}" alt="...">
-                                    </a>
-                                </div>
-                                <div class="nb">4</div>
-                                <div class="content">
-                                    <p>
-                                        <a href="post-default.html">10 Best and Most Beautiful Places to Visit in Italy</a>
-                                    </p>
-                                    <small>
-                                        <span class="icon_clock_alt"></span> January 15, 2021</small>
-                                </div>
-                            </li>
+                            {% endfor %}
                         </ul>
                     </div>
+                    {% endif %}
                     <!--/-->
                     
                     <!--widget-categories-->
+                    {% if links %}
                     <div class="widget" data-aos="fade-up" data-aos-duration="3000">
                         <div class="section-title">
                             <h5>Categories</h5>
@@ -200,6 +166,7 @@
                             {% endfor %}
                         </ul>
                     </div>
+                    {% endif %}
                     
                     <!--widget-instagram-->
                     <div class="widget" data-aos="fade-up" data-aos-duration="3000">
