--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -185,9 +185,12 @@
 		<footer class="bg-white rounded shadow p-5 mb-4 mt-4">
 			<div class="row">
 				<div class="col-12 col-md-4 col-xl-6 mb-4 mb-md-0">
-					<p class="mb-0 text-center text-lg-start">© <span class="current-year"></span> <a
-							class="text-primary fw-normal" href="#"
-							target="_blank">VirTips</a></p>
+					<p class="mb-0 text-center text-lg-start">© 
+						<span class="current-year">
+							<script type="text/javascript">document.write(new Date().getFullYear());</script>
+						</span> 
+						<a class="text-primary fw-normal" href="#" target="_blank">VirTips</a>
+					</p>
 				</div>
 				<div class="col-12 col-md-8 col-xl-6 text-center text-lg-start">
 					<ul class="list-inline text-md-end mb-0">
