--- a/templates/dashboard/blog/post_details.html
+++ b/templates/dashboard/blog/post_details.html
@@ -54,6 +54,7 @@
 			<!-- xxxxxxxxxxxx -->
 
 			<div class="container">
+				{% include 'dashboard/includes/alert.html' %}
 				<div class="card border-0 shadow mx-auto">
 					<div class="card-body">
 						<div class="px-4 py-4">
@@ -83,13 +84,13 @@
 										<i class="fas fa-chevron-down" ></i>
 									</span>
 									<div class="dropdown-menu dashboard-dropdown dropdown-menu-start mt-2 py-1">
-										<a class="dropdown-item d-flex align-items-center" href="#">
+										<a class="dropdown-item d-flex align-items-center" href="{% url 'dashboard:edit-post' post.slug %}">
 											<span class="dropdown-icon text-gray-400 me-2 ">
 												<i class="fas fa-feather-alt"></i>
 											</span>
 										 Edit Article
 										</a>
-										<a class="dropdown-item d-flex align-items-center" href="#">
+										<a class="dropdown-item d-flex align-items-center" href="{% url 'dashboard:delete-post' post.slug %}">
 											<span class="dropdown-icon text-gray-400 me-2 ">
 												<i class="fas fa-trash-alt"></i>
 											</span>
