--- a/templates/dashboard/blog/published_articles.html
+++ b/templates/dashboard/blog/published_articles.html
@@ -52,7 +52,7 @@
 						<div class="card h-100 border-light shadow-sm">
 							<img src="{{ post.thumbnail.url }}" class="card-img-top post-card-img" alt="...">
 							<div class="card-body">
-								<a href="" class="text-center">
+								<a href="{% url 'dashboard:post_details' post.slug %}" class="text-center">
 									<h5 class="card-title">{{ post.title }}</h5>
 								</a>
 								<p class="card-text">{{ post.overview | truncatewords_html:10 }}</p>
@@ -74,7 +74,7 @@
 												</span>
 											 Edit Article
 											</a>
-											<a class="dropdown-item d-flex align-items-center" href="#">
+											<a class="dropdown-item d-flex align-items-center" href="#" data-bs-toggle="modal" data-bs-target="#modal-notification">
 												<span class="dropdown-icon text-gray-400 me-2 ">
 													<i class="fas fa-trash-alt"></i>
 												</span>
@@ -91,5 +91,28 @@
 			</section>
 
         </main>
+		{% for post in posts %}
+		<div class="col-lg-4">
+			<div class="modal fade" id="modal-notification" tabindex="-1" role="dialog" aria-labelledby="modal-notification" aria-hidden="true">
+			<div class="modal-dialog  modal-dialog-centered" role="document">
+				<div class="modal-content bg-gray-800">
+				<button type="button" class="btn-close theme-settings-close fs-6 ms-auto" data-bs-dismiss="modal" aria-label="Close"></button>
+				  	<div class="modal-header border-0">
+				  	</div>
+				  	<div class="modal-body text-white">
+						<div class="py-3 text-center">
+							<span class="modal-icon">
+								<i class="fas fa-exclamation-triangle fa-3x text-gray-200"></i>
+							</span>
+						  <h2 class="h4 modal-title my-3">Are you sure?</h2>
+						  <p>Are you sure you want to delete the Post "{{post.title}}"? All of the related items will be deleted.</p>
+						  <a href="{% url 'dashboard:delete-post' post.slug %}" class="btn btn-sm btn-white">Yes, I'm sure</a>
+						</div>
+				  	</div>
+				</div>
+			  </div>
+			</div>
+		</div>
+		{% endfor %}
 {% endblock content %}
     
