⚰️ Remove unused inputs

--- a/templates/blog/post.html
+++ b/templates/blog/post.html
@@ -118,7 +118,7 @@
                                     <ul class="list-inline">
                                         <li>
                                             <a href="#" class="color-facebook">
-                                                <i class="fab fa-facebook"></i>
+                                                <i class="fab fa-facebook-f"></i>
                                             </a>
                                         </li>
                                         <li>
@@ -256,15 +256,6 @@
                                     <div class="form-group">
                                         {{comment_form.email}}
                                     </div>
-                                </div>
-                                <div class="col-12 mb-20">
-                                    <div class="form-group">
-                                        <input type="text" name="website" id="website" class="form-control" placeholder="website">
-                                    </div>
-                                    {% comment %} <label> {% endcomment %}
-                                        {% comment %} <input name="name" type="checkbox" value="{{comment_form.name}}" required="required">  {% endcomment %}
-                                       {% comment %} <span>save my name , email and website in this browser for the next time I comment.</span>                                    {% endcomment %}
-                                    {% comment %} </label> {% endcomment %}
                                 </div>
                                 <div class="col-12">
                                     <button type="submit" name="submit" class="btn-custom" value="submit">
