--- a/templates/dashboard/blog/post_details.html
+++ b/templates/dashboard/blog/post_details.html
@@ -23,13 +23,13 @@
 								Add New..
 							</button>
 							<div class="dropdown-menu dashboard-dropdown dropdown-menu-start mt-2 py-1">
-									<a class="dropdown-item d-flex align-items-center" href="#">
+									<a class="dropdown-item d-flex align-items-center" href="{% url 'dashboard:article-create' %}">
 										<span class="dropdown-icon text-gray-400 me-2 ">
 											<i class="fas fa-feather-alt"></i>
 										</span>
 										Add Article
 									</a>
-									<a class="dropdown-item d-flex align-items-center" href="#">
+									<a class="dropdown-item d-flex align-items-center" href="{% url 'dashboard:add-category' %}">
 										<span class="dropdown-icon text-gray-400 me-2 ">
 											<i class="fas fa-layer-group"></i>
 										</span>
@@ -55,7 +55,7 @@
 
 			<div class="container">
 				{% include 'dashboard/includes/alert.html' %}
-				<div class="card border-0 shadow mx-auto">
+				<div class="card border-0 shadow mx-auto mb-4">
 					<div class="card-body">
 						<div class="px-4 py-4">
 							<img src="{{post.thumbnail.url}}" alt="" id="article-thumbnail">
