✨ Display author's social accounts

--- a/templates/blog/post.html
+++ b/templates/blog/post.html
@@ -117,28 +117,23 @@
                                 <div class="social-media">
                                     <ul class="list-inline">
                                         <li>
-                                            <a href="#" class="color-facebook">
+                                            <a href="{{ post.author.facebook_url }}" class="color-facebook">
                                                 <i class="fab fa-facebook-f"></i>
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="#" class="color-instagram">
+                                            <a href="{{ post.author.instagram_url }}" class="color-instagram">
                                                 <i class="fab fa-instagram"></i>
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="#" class="color-twitter">
+                                            <a href="{{ post.author.twitter_url }}" class="color-twitter">
                                                 <i class="fab fa-twitter"></i>
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="#" class="color-youtube">
-                                                <i class="fab fa-youtube"></i>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#" class="color-pinterest">
-                                                <i class="fab fa-pinterest"></i>
+                                            <a href="{{ post.author.linkedin_url }}" class="color-linkedin">
+                                                <i class="fab fa-linkedin-in"></i>
                                             </a>
                                         </li>
                                     </ul>
